# code-assistant-manager

./: .gitignore  MANIFEST.in  README.md  REFACTOR_FETCH_DUPLICATION.md  install.sh  providers.json.example  pyproject.toml  requirements.txt
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
code_assistant_manager/: __init__.py  agent_repos.json  azure_openai_models.py  config.py  config.yaml  domain_models.py  endpoints.py  lazy_loader.py  plugin_repos.json  providers.json  repo_loader.py  repositories.py  skill_repos.json  strategies.py  tools.yaml  v1_models.py  validators.py
code_assistant_manager/agents/: manager.py  models.py
code_assistant_manager/cli/: agents_commands.py  app.py  commands.py  completion_commands.py  extension_commands.py  options.py  plugin_commands.py  prompts_commands.py  skills_commands.py  upgrade.py  utils.py
code_assistant_manager/configs/: __init__.py  base.py
code_assistant_manager/fetching/: __init__.py  base.py  cache.py  parallel.py  parsers.py  repository.py
code_assistant_manager/mcp/: cli.py  install_commands.py  server_commands.py
code_assistant_manager/plugins/: __init__.py  fetch.py  manager.py
code_assistant_manager/skills/: __init__.py  manager.py  models.py  pi_coding_agent.py  qwen.py
code_assistant_manager/tools/: __init__.py  aichat.py  ampcode.py  base.py  blackbox.py  claude.py  codebuddy.py  codex.py  continue_tool.py  copilot.py  crush.py  cursor.py  droid.py  endpoint_display.py  gemini.py  goose.py  iflow.py  kimi.py  neovate.py  opencode.py  pi_coding_agent.py  qodercli.py  qwen.py  registry.py  zed.py
docs/: BLACKBOX_INTEGRATION.md  CHANGELOG.md  COMPLETE_CHANGES.md  FIXES_SUMMARY.md  LAZY_LOADING_REPORT.md  README_NAME_CONSISTENCY.md  README_zh.md  TEST_SUITE_SUMMARY.md  TOOLS_IMPLEMENTATION_COMPLETE.md  multi-source-repos.md
tests/: NAME_CONSISTENCY_TESTS.md  _script_endpoint_display_test.py  _script_endpoint_menu_test.py  check_help_style.sh  run_comprehensive_tests.sh  test_agent_skill_integration.py  test_claude_agent_handler.py  test_cli.py  test_cli_app_commands.py  test_cli_comprehensive.py  test_cli_comprehensive_commands.py  test_cli_integration_comprehensive.py  test_cli_options.py  test_cli_short_commands.py  test_comprehensive_cli_command_coverage.py  test_comprehensive_cli_integration.py  test_comprehensive_installation.py  test_configuration_comprehensive.py  test_error_scenarios_comprehensive.py  test_extension_commands.py  test_gemini_fixes.py  test_installation_by_repo.py  test_installation_error_scenarios.py  test_launch_all_tools.py  test_mcp_base_functionality.py  test_performance_and_resources.py  test_plugin_commands_integration.py  test_plugin_install_commands.py  test_plugin_list_options.py  test_plugin_marketplace_name_consistency.py  test_refactoring_changes.py  test_security_validation_advanced.py  test_skill_name_consistency.py  test_skill_refactoring.py  test_skills_recursive.py  test_tool_integrations.py  test_tools.py  test_tools_opencode.py  test_upgrade_functionality.py  test_upstream_changes.py
tests/unit/: test_cli_app_types.py  test_codex_tool_multi_provider.py  test_config_show.py  test_mcp_base_coverage.py  test_plugin_commands.py  test_skill_handlers.py  test_skills.py  test_skills_pi_coding_agent.py  test_skills_qwen.py  (+1 more)
(+25 files in other folders)
